testsuite/tests/properties/invalid_set/not_hashable/test.lkt
from common import FooNode

class Example: FooNode {
    @exported
    fun test(): Bool = node.token_start.singleton().to_set()
}

